
PIG-4570: Allow AvroStorage to use a class for the schema (pmazak via daijy)

PIG-4405: Adding 'map[]' support to mock/Storage (nielsbasjes via daijy)

PIG-4638: Allow TOMAP to accept dynamically sized input (nielsbasjes via daijy)

PIG-4639: Add better parser for Apache HTTPD access log (nielsbasjes via daijy)

BUG FIXES

PIG-4779: testBZ2Concatenation[pig.bzip.use.hadoop.inputformat = true] failing due to successful read (knoguchi)

PIG-4587: Applying isFirstReduceOfKey for Skewed left outer join skips records (rohini)

PIG-4782: OutOfMemoryError: GC overhead limit exceeded with POPartialAgg (rohini)

PIG-4737: Check and fix clone implementation for all classes extending PhysicalOperator (rohini)

PIG-4770: OOM with POPartialAgg in some cases (rohini)

PIG-4773: [Pig on Tez] Secondary key descending sort in nested foreach after union does ascending instead (rohini)

PIG-4774: Fix NPE in SUM,AVG,MIN,MAX UDFs for null bag input (rohini)

PIG-4757: Job stats on successfully read/output records wrong with multiple inputs/outputs (rohini)

PIG-4769: UnionOptimizer hits errors when merging vertex group into split (rohini)

PIG-4768: EvalFunc reporter is null in Tez (rohini)

PIG-4760: TezDAGStats.convertToHadoopCounters is not used, but impose MR counter limit (daijy)

PIG-4755: Typo in runpigmix script (mitdesai via daijy)

PIG-4736: Removing empty keys in UDFContext broke one LoadFunc (rohini)

PIG-4733: Avoid NullPointerException in JVMReuseImpl for builtin classes (rohini)

PIG-4722: [Pig on Tez] NPE while running Combiner (rohini)

PIG-4730: [Pig on Tez] Total parallelism estimation does not account load parallelism (rohini)

PIG-4689: CSV Writes incorrect header if two CSV files are created in one script (nielsbasjes via daijy)

PIG-4727: Incorrect types table for AVG in docs (nsmith via daijy)

PIG-4725: Typo in FrontendException messages "Incompatable" (nsmith via daijy)

PIG-4721: IsEmpty documentation error (nsmith via daijy)
