@@ -1580,6 +1580,21 @@ b = load ':INPATH:/singlefile/studentcolon10k' using PigStorage(':') as (name, a
 c = union a, b;
 d = distinct c;
 store c into ':OUTPATH:';\,
+            },
+            {
+            # Union + Groupby + FILTER
+            'num' => 17,
+            'pig' => q\a = load ':INPATH:/singlefile/studenttab10k' as (name, age, gpa:float);
+b = load ':INPATH:/singlefile/studentcolon10k' using PigStorage(':') as (name, age, gpa:float);
+c = group a by name;
+d = group b by name;
+e = union c, d;
+e = foreach e generate $0, $1 as groupbag;
+f = foreach e {
+     g = order $1 by age asc, gpa desc;  
+     h = filter g by (gpa == 0 ? true : false);
+     generate group, h; };
+store f into ':OUTPATH:';\,
             }
 		]
 		},
